--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "react": "17.0.2",
     "react-native": "0.66.3",
-    "react-native-ble-plx": "^2.0.3",
+    "react-native-ble-manager": "^8.0.0",
     "react-native-flash-message": "^0.1.23",
     "react-native-get-location": "^2.1.2",
     "react-native-safe-area-context": "^3.3.2",
