--- a/package.json
+++ b/package.json
@@ -11,16 +11,24 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.11",
+    "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "lottie-react-native": "^5.0.1",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-animated-loader": "^0.0.9",
     "react-native-ble-manager": "^8.0.0",
     "react-native-flash-message": "^0.1.23",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-get-location": "^2.1.2",
+    "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-svg": "^12.1.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "toggle-switch-react-native": "^3.3.0"
   },
   "devDependencies": {
